--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<p>Hello World</p>
-<p>Kya Haal Hai</p>
+<p>Hello World(dada)</p>
+<p>Kya Haal Hai(hello)</p>
 <p>Mera naam jing hing</p>
 <p>Wah kya baat hai</p>
 <p>ADDED 2ND FEATURE</p>
+<p>ADED 3RD Feature</p>
